--- a/src/components/tabs/tabs.scss
+++ b/src/components/tabs/tabs.scss
@@ -1,34 +1,124 @@
-  .hlght {
-    color: #488aff;
+@mixin button-like-block {
+  cursor: pointer;
+  &:hover {
+    background-color: rgba(0, 0, 220, 0.7);
+    i {
+      color: white;
+    }
   }
-  .non-Hlght {
-    color:black;
+  &:active {
+    background-color: rgba(0, 0, 220, 0.9);
+    i {
+      color: white;
+    }
   }
+}
+@mixin button-like-icon {
+  cursor: pointer;
+  &:hover {
+    color: rgba(0, 0, 220, 1.0);
+  }
+  &:active {
+    color: rgba(220, 0, 220, 1.0);
+  }
+}
+.hlght {
+  color: #488aff;
+}
+.non-Hlght {
+  color:black;
+}
 onsite-tabs {
   overflow: visible;
+  z-index: 48;
+
+  .onsite-tab-bar {
+    left: 0;
+    bottom: 0;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    overflow: visible;
+    z-index: 10;
+    display: block;
+    width: 100%;
+    height: 56px;
+  }
   #onsite-nav > button:nth-child > span {
     overflow: visible;
   }
-  z-index: 48;
+  #onsite-nav > .onsite-tab-button > span {
+    overflow: visible;
+  }
   #onsite-nav {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     overflow: visible;
-    button {
-      z-index: 49;
-      flex: 0 0 auto;
-      overflow: visible;
-      background-color: transparent;
-      box-shadow: none;
-      color: rgba(100,100,100,1);
-      :active {
-        color: #488aff;
-      }
+  }
+  .onsite-tab-button {
+    @include button-like-block;
+    z-index: 49;
+    flex: 1 1 auto;
+    height: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    overflow: visible;
+    background-color: transparent;
+    box-shadow: none;
+    color: rgba(100,100,100,1);
+    border-left: 1px dotted rgba(240, 240, 240, 1.0);
+    border-right: 1px dotted rgba(240, 240, 240, 1.0);
+    border-radius: 5px;
+    &:last-child {
+      margin-right: 10px;
+      border-right: 0;
+    }
+    &:first-child {
+      margin-left: 10px;
+      border-left: 0;
+    }
+    // height: 50px;
+  }
+
+  button {
+    z-index: 49;
+    flex: 0 0 auto;
+    overflow: visible;
+    background-color: transparent;
+    box-shadow: none;
+    color: rgba(100,100,100,1);
+    &:active {
+      color: #488aff;
     }
   }
+
+  .icon-container {
+    display: flex;
+    width: 100%;
+    flex: 1 1 auto;
+    flex-flow: column nowrap;
+    position: relative;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+  }
+  i.tab-icon-ionic {
+    font-family: "Ionicons";
+    font-size: 24px;
+    font-style: normal;
+  }
+
+
+
   .hlght {
     color: #488aff;
   }
@@ -43,11 +133,11 @@ onsite-tabs {
     justify-content: center;
     align-items: center;
     align-content: flex-start;
-    width: 50%;
+    // width: 50%;
     z-index: 200;
     position: absolute;
-    top: 0px;
-    left: 20px;
+    top: 16px;
+    right: 8px;
     overflow: visible;
   }
   div.badge-container > div.msg-badge {
@@ -60,4 +150,146 @@ onsite-tabs {
     font-size: 11px;
     line-height: 11px;
   }
+
+  $spinnerSize: 16px;
+
+  .waiting-badge {
+    flex: 1 1 auto;
+    border-radius: 100px;
+    background-color: transparent;
+    background-image: url('/assets/images/dotspinner.svg');
+    background-size: contain;
+    width: $spinnerSize;
+    max-width: $spinnerSize;
+    min-width: $spinnerSize;
+    height: $spinnerSize;
+    max-height: $spinnerSize;
+    min-height: $spinnerSize;
+    // position: relative;
+    // animation: dotspinner 2s steps(32, end) infinite;
+    // animation: dotspinner 1.1s infinite ease;
+    // transform: translateZ(0);
+  }
+
+
+  .sk-circle {
+    width: $spinnerSize;
+    max-width: $spinnerSize;
+    min-width: $spinnerSize;
+    height: $spinnerSize;
+    max-height: $spinnerSize;
+    min-height: $spinnerSize;
+    position: relative;
+  }
+  .hideSpinner {
+    display: none;
+    // white-space: inherit;
+  }
+  .sk-circle .sk-child {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+  .sk-circle .sk-child:before {
+    content: '';
+    display: block;
+    margin: 0 auto;
+    width: 15%;
+    height: 15%;
+    background-color: rgba(255, 0, 0, 0.8);
+    border-radius: 100%;
+    animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
+  }
+  .sk-circle .sk-circle2 {
+    transform: rotate(30deg); }
+  .sk-circle .sk-circle3 {
+    transform: rotate(60deg); }
+  .sk-circle .sk-circle4 {
+    transform: rotate(90deg); }
+  .sk-circle .sk-circle5 {
+    transform: rotate(120deg); }
+  .sk-circle .sk-circle6 {
+    transform: rotate(150deg); }
+  .sk-circle .sk-circle7 {
+    transform: rotate(180deg); }
+  .sk-circle .sk-circle8 {
+    transform: rotate(210deg); }
+  .sk-circle .sk-circle9 {
+    transform: rotate(240deg); }
+  .sk-circle .sk-circle10 {
+    transform: rotate(270deg); }
+  .sk-circle .sk-circle11 {
+    transform: rotate(300deg); }
+  .sk-circle .sk-circle12 {
+    transform: rotate(330deg); }
+  .sk-circle .sk-circle2:before {
+    animation-delay: -1.1s; }
+  .sk-circle .sk-circle3:before {
+    animation-delay: -1s; }
+  .sk-circle .sk-circle4:before {
+    animation-delay: -0.9s; }
+  .sk-circle .sk-circle5:before {
+    animation-delay: -0.8s; }
+  .sk-circle .sk-circle6:before {
+    animation-delay: -0.7s; }
+  .sk-circle .sk-circle7:before {
+    animation-delay: -0.6s; }
+  .sk-circle .sk-circle8:before {
+    animation-delay: -0.5s; }
+  .sk-circle .sk-circle9:before {
+    animation-delay: -0.4s; }
+  .sk-circle .sk-circle10:before {
+    animation-delay: -0.3s; }
+  .sk-circle .sk-circle11:before {
+    animation-delay: -0.2s; }
+  .sk-circle .sk-circle12:before {
+    animation-delay: -0.1s; }
+
+  @keyframes sk-circleBounceDelay {
+    0%, 80%, 100% {
+      transform: scale(0);
+    } 40% {
+      transform: scale(1);
+    }
+  }
+
+  @keyframes dotspinner {
+    0%,
+    100% {
+      box-shadow: 0em -2.6em 0em 0em #ffffff, 1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2), 2.5em 0em 0 0em rgba(255, 255, 255, 0.2), 1.75em 1.75em 0 0em rgba(255, 255, 255, 0.2), 0em 2.5em 0 0em rgba(255, 255, 255, 0.2), -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.2), -2.6em 0em 0 0em rgba(255, 255, 255, 0.5), -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.7);
+    }
+    12.5% {
+      box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.7), 1.8em -1.8em 0 0em #ffffff, 2.5em 0em 0 0em rgba(255, 255, 255, 0.2), 1.75em 1.75em 0 0em rgba(255, 255, 255, 0.2), 0em 2.5em 0 0em rgba(255, 255, 255, 0.2), -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.2), -2.6em 0em 0 0em rgba(255, 255, 255, 0.2), -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.5);
+    }
+    25% {
+      box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.5), 1.8em -1.8em 0 0em rgba(255, 255, 255, 0.7), 2.5em 0em 0 0em #ffffff, 1.75em 1.75em 0 0em rgba(255, 255, 255, 0.2), 0em 2.5em 0 0em rgba(255, 255, 255, 0.2), -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.2), -2.6em 0em 0 0em rgba(255, 255, 255, 0.2), -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
+    }
+    37.5% {
+      box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.2), 1.8em -1.8em 0 0em rgba(255, 255, 255, 0.5), 2.5em 0em 0 0em rgba(255, 255, 255, 0.7), 1.75em 1.75em 0 0em #ffffff, 0em 2.5em 0 0em rgba(255, 255, 255, 0.2), -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.2), -2.6em 0em 0 0em rgba(255, 255, 255, 0.2), -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
+    }
+    50% {
+      box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.2), 1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2), 2.5em 0em 0 0em rgba(255, 255, 255, 0.5), 1.75em 1.75em 0 0em rgba(255, 255, 255, 0.7), 0em 2.5em 0 0em #ffffff, -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.2), -2.6em 0em 0 0em rgba(255, 255, 255, 0.2), -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
+    }
+    62.5% {
+      box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.2), 1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2), 2.5em 0em 0 0em rgba(255, 255, 255, 0.2), 1.75em 1.75em 0 0em rgba(255, 255, 255, 0.5), 0em 2.5em 0 0em rgba(255, 255, 255, 0.7), -1.8em 1.8em 0 0em #ffffff, -2.6em 0em 0 0em rgba(255, 255, 255, 0.2), -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
+    }
+    75% {
+      box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.2), 1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2), 2.5em 0em 0 0em rgba(255, 255, 255, 0.2), 1.75em 1.75em 0 0em rgba(255, 255, 255, 0.2), 0em 2.5em 0 0em rgba(255, 255, 255, 0.5), -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.7), -2.6em 0em 0 0em #ffffff, -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
+    }
+    87.5% {
+      box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.2), 1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2), 2.5em 0em 0 0em rgba(255, 255, 255, 0.2), 1.75em 1.75em 0 0em rgba(255, 255, 255, 0.2), 0em 2.5em 0 0em rgba(255, 255, 255, 0.2), -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.5), -2.6em 0em 0 0em rgba(255, 255, 255, 0.7), -1.8em -1.8em 0 0em #ffffff;
+    }
+  }
+
+
+  // @keyframes dotspinner {
+  //   0% {
+  //     transform: rotate(0deg);
+  //   }
+  //   100% {
+  //     transform: rotate(360deg);
+  //   }
+  // }
 }
