--- a/src/pages/comment/comment.scss
+++ b/src/pages/comment/comment.scss
@@ -1,5 +1,58 @@
 page-comment {
+  .comment-item {
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-content: center;
+    align-items: center;
+  }
+  .item-label {
+    display: block;
+    width: 100%;
+    font-weight: bold;
+  }
+  .item-data {
+    width: 100%;
+    display: block;
+  }
+  .item-input {
+    width: 100%;
+
+  }
+  .item-textarea {
+    width: 100%;
+    height: 50%;
+    min-height: 200px;
+  }
+  .button-wrapper {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: space-between;
+    align-items: center;
+    width: 100%;
+    .comment-button {
+      flex: 0 1 auto;
+      min-width: 120px;
+      width: 48%;
+    }
+  }
+  .ion-item-box {
+    border: 1px dotted lightgrey;
+  }
+  .textarea-wrapper {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-content: center;
+    align-items: center;
+  }
+  .comment-textarea-title {
+    flex: 0 1 auto;
+  }
   .comment-textarea {
+    flex: 0 1 auto;
     min-height: 200px;
     height: 50%;
     .text-input {
