--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -37,6 +37,7 @@ page-home {
   ion-card.shift-summary {
     margin-left: 0;
     margin-right: 0;
+    margin-top: 0;
     width: 100%;
     background-color: transparent;
   }
