--- a/src/components/tabs/tabs.html
+++ b/src/components/tabs/tabs.html
@@ -1,10 +1,11 @@
 <!-- <ion-footer no-border>
   <ion-toolbar>
     <div id="onsite-nav">
-     <button ion-button icon-only [disabled]="allTabs.disabled" (tap)="goToPage(tab.name)" (press)="aboutPage($event, tab.name)" *ngFor="let tab of tabInfo; let i=index">
+      <button ion-button icon-only [disabled]="allTabs.disabled" (tap)="goToPage(tab.name)" (press)="aboutPage($event, tab.name)" *ngFor="let tab of tabInfo; let i=index">
         <ion-icon [class.hlght]="tab.active" id="tab{{i+1}}" [name]="tab.icon">
           <div class="badge-container" >
             <div class="msg-badge" [class.hide]='tab.hideBadge'>{{tab.badgeCount}}</div>
+            <div class="waiting-badge waiting-gif" *ngIf="!hider[i]"></div>
           </div>
         </ion-icon>
       </button>
@@ -12,15 +13,47 @@
   </ion-toolbar>
 </ion-footer> -->
 
-<div class="onsite-tab-bar" id="onsite-nav" *ngIf="tabsReady">
-  <!-- <div class="tab-button" [class.clickDisabled]="allTabs.disabled" (tap)="goToPage(tab.name)" (press)="aboutPage($event, tab.name)" *ngFor="let tab of tabInfo; let i=index"> -->
+
+<!-- <ion-footer no-border>
+  <ion-toolbar> -->
+    <div class="onsite-tab-bar" id="onsite-nav" [class.disabled]="tabServ.isDisabled()">
+      <div class="onsite-tab-button" [class.hlght]="tabServ.isActive(i)" (click)="tabServ.goToPage(tab.name)" *ngFor="let tab of tabServ.tabInfo; let i=index">
+        <div class="icon-container">
+          <i class="tab-icon-ionic" [ngClass]="tabServ.getIcon(i)"></i>
+          <div class="badge-container">
+            <div class="msg-badge" [class.hide]="tabServ.getBadgeCount(i) < 1">{{tabServ.getBadgeCount(i)}}</div>
+            <!-- <div class="waiting-badge waiting-gif" *ngIf="!getHider(i)"></div> -->
+            <!-- <div class="waiting-badge waiting-gif" *ngIf="!getHider(i)"> -->
+            <!-- <div class="sk-circle waiting-badge" *ngIf="!getHider(i)"> -->
+            <div class="sk-circle waiting-badge" [class.hideSpinner]="tabServ.isHidden(i)">
+              <div class="sk-circle1 sk-child"></div>
+              <div class="sk-circle2 sk-child"></div>
+              <div class="sk-circle3 sk-child"></div>
+              <div class="sk-circle4 sk-child"></div>
+              <div class="sk-circle5 sk-child"></div>
+              <div class="sk-circle6 sk-child"></div>
+              <div class="sk-circle7 sk-child"></div>
+              <div class="sk-circle8 sk-child"></div>
+              <div class="sk-circle9 sk-child"></div>
+              <div class="sk-circle10 sk-child"></div>
+              <div class="sk-circle11 sk-child"></div>
+              <div class="sk-circle12 sk-child"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <!-- </ion-toolbar>
+</ion-footer> -->
+
+<!-- <div class="onsite-tab-bar" id="onsite-nav" *ngIf="tabsReady">
   <div class="onsite-tab-button" [class.clickDisabled]="tabServ.isDisabled()" (click)="goToPage(tab.name)" *ngFor="let tab of tabInfo; let i=index">
-    <!-- <ion-icon [class.hlght]="tab.active" [name]="tab.icon" id="tab{{i+1}}"> -->
     <div class="icon-container">
       <i class="tab-icon-ionic" [ngClass]="getIcon(i)"></i>
       <div class="badge-container">
         <div class="msg-badge" [class.hide]="tab.hideBadge">{{tab.badgeCount}}</div>
-        <div class="sk-circle waiting-badge" [class.hideSpinner]="hideArray[i]">
+        <div class="waiting-badge waiting-gif" *ngIf="!hider[i]"></div> -->
+        <!-- <div class="sk-circle waiting-badge" [class.hideSpinner]="hideArray[i]">
           <div class="sk-circle1 sk-child"></div>
           <div class="sk-circle2 sk-child"></div>
           <div class="sk-circle3 sk-child"></div>
@@ -33,9 +66,8 @@
           <div class="sk-circle10 sk-child"></div>
           <div class="sk-circle11 sk-child"></div>
           <div class="sk-circle12 sk-child"></div>
-        </div>
-      </div>
+        </div> -->
+      <!-- </div>
     </div>
-    <!-- </ion-icon> -->
   </div>
-</div>
+</div> -->
