--- a/src/components/tabs/tabs.scss
+++ b/src/components/tabs/tabs.scss
@@ -1,33 +1,34 @@
-@mixin button-like-block {
-  cursor: pointer;
-  &:hover {
-    background-color: rgba(0, 0, 220, 0.7);
-    i {
-      color: white;
-    }
-  }
-  &:active {
-    background-color: rgba(0, 0, 220, 0.9);
-    i {
-      color: white;
-    }
-  }
-}
-@mixin button-like-icon {
-  cursor: pointer;
-  &:hover {
-    color: rgba(0, 0, 220, 1.0);
-  }
-  &:active {
-    color: rgba(220, 0, 220, 1.0);
-  }
-}
-.hlght {
-  color: #488aff;
-}
-.non-Hlght {
-  color:black;
-}
+// @mixin button-like-block {
+//   cursor: pointer;
+//   &:hover {
+//     background-color: rgba(0, 0, 220, 0.7);
+//     i {
+//       color: white;
+//     }
+//   }
+//   &:active {
+//     background-color: rgba(0, 0, 220, 0.9);
+//     i {
+//       color: white;
+//     }
+//   }
+// }
+// @mixin button-like-icon {
+//   cursor: pointer;
+//   &:hover {
+//     color: rgba(0, 0, 220, 1.0);
+//   }
+//   &:active {
+//     color: rgba(220, 0, 220, 1.0);
+//   }
+// }
+// .hlght {
+//   color: #488aff;
+//   background-color: rgba(75, 170, 255, 0.5);
+// }
+// .non-Hlght {
+//   color:black;
+// }
 onsite-tabs {
   overflow: visible;
   z-index: 48;
@@ -46,6 +47,15 @@ onsite-tabs {
     display: block;
     width: 100%;
     height: 56px;
+    // border-top: 1px solid rgba(240, 240, 240, 1.0);
+
+    /* Looks OK for making the tab bar appear slightly above the page */
+    // box-shadow: 0px 2px 13px 4px rgba(170, 170, 170, 0.5);
+
+    /* Looks pretty good for making the tab bar appear slightly below the page */
+    box-shadow: 0px 2px 4px 1px rgba(170, 170, 170, 0.5) inset;
+
+    contain: strict;
   }
   #onsite-nav > button:nth-child > span {
     overflow: visible;
@@ -62,7 +72,6 @@ onsite-tabs {
     overflow: visible;
   }
   .onsite-tab-button {
-    @include button-like-block;
     z-index: 49;
     flex: 1 1 auto;
     height: 100%;
@@ -77,17 +86,53 @@ onsite-tabs {
     color: rgba(100,100,100,1);
     border-left: 1px dotted rgba(240, 240, 240, 1.0);
     border-right: 1px dotted rgba(240, 240, 240, 1.0);
-    border-radius: 5px;
+    border-top: 1px solid rgba(240, 240, 240, 1.0);
+    // border-radius: 5px;
     &:last-child {
-      margin-right: 10px;
+      // margin-right: 10px;
       border-right: 0;
     }
     &:first-child {
-      margin-left: 10px;
+      // margin-left: 10px;
       border-left: 0;
+    }
+    &:not(.clickDisabled) {
+      @include button-like-block;
+    }
+    &.clickDisabled {
+      color: rgba(100, 100, 100, 0.5);
+      .msg-badge {
+        background-color: rgba(220, 220, 220, 1.0);
+        color: rgba(100, 100, 100, 0.5);
+      }
+    }
+    &.hlght {
+      color: #488aff;
+      background-color: rgba(255, 255, 255, 1.0);
+
+      /* this one looks pretty good for popping the tab up */
+      // box-shadow: 0px 0px 10px 4px rgba(120, 120, 120, 0.7);
+
+      /* this one looks pretty good for popping the tab down */
+      box-shadow: 0px 8px 9px -3px rgba(120, 120, 120, 0.7) inset;
+      border-right: 0;
+      border-top: 0;
+      border-bottom-left-radius: 3px;
+      border-bottom-right-radius: 3px;
+      +.onsite-tab-button {
+        border-left: 0;
+      }
+      // background-color: rgba(75, 170, 255, 0.5);
+    }
+    &.non-Hlght {
+      color:black;
     }
     // height: 50px;
   }
+
+  // .onsite-tab-button.hlght+.onsite-tab-button {
+  //   border-right: 0;
+  // }
 
   button {
     z-index: 49;
@@ -103,8 +148,8 @@ onsite-tabs {
 
   .icon-container {
     display: flex;
-    width: 100%;
-    flex: 1 1 auto;
+    // width: 100%;
+    flex: 0 1 auto;
     flex-flow: column nowrap;
     position: relative;
     justify-content: center;
@@ -113,31 +158,29 @@ onsite-tabs {
   }
   i.tab-icon-ionic {
     font-family: "Ionicons";
-    font-size: 24px;
+    font-size: 3em;
     font-style: normal;
+    // font-weight: bold;
+    font-weight: normal;
+    color: rgba(80, 80, 80, 1.0);
+    // text-shadow: 5px 2px 10px 0px rgba(50, 50, 50, 0.7);
   }
 
 
-
-  .hlght {
-    color: #488aff;
-  }
-  .non-Hlght {
-    color:black;
-  }
 
   div.badge-container {
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
+    flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
     align-content: flex-start;
     // width: 50%;
     z-index: 200;
     position: absolute;
-    top: 16px;
-    right: 8px;
+    // top: 16px;
+    // right: 8px;
+    top: -4px;
+    right: -8px;
     overflow: visible;
   }
   div.badge-container > div.msg-badge {
@@ -147,17 +190,25 @@ onsite-tabs {
     color: white;
     background-color: rgba(180,0,0,1);
     padding: 5px 0;
+    position: absolute;
+    top: -4px;
+    right: -3px;
     font-size: 11px;
     line-height: 11px;
+    width: 2em;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
   }
 
-  $spinnerSize: 16px;
+  $spinnerSize: 24px;
 
   .waiting-badge {
     flex: 1 1 auto;
     border-radius: 100px;
     background-color: transparent;
-    background-image: url('/assets/images/dotspinner.svg');
+    // background-image: url('/assets/images/dotspinner.svg');
+    // background-image: url('/assets/images/circle-dot-spinner.gif');
     background-size: contain;
     width: $spinnerSize;
     max-width: $spinnerSize;
