--- a/src/components/tabs/tabs.scss
+++ b/src/components/tabs/tabs.scss
@@ -84,9 +84,9 @@ onsite-tabs {
     background-color: transparent;
     box-shadow: none;
     color: rgba(100,100,100,1);
-    border-left: 1px dotted rgba(240, 240, 240, 1.0);
-    border-right: 1px dotted rgba(240, 240, 240, 1.0);
-    border-top: 1px solid rgba(240, 240, 240, 1.0);
+    // border-left: 1px dotted rgba(240, 240, 240, 1.0);
+    // border-right: 1px dotted rgba(240, 240, 240, 1.0);
+    // border-top: 1px solid rgba(240, 240, 240, 1.0);
     // border-radius: 5px;
     &:last-child {
       // margin-right: 10px;
@@ -107,20 +107,29 @@ onsite-tabs {
       }
     }
     &.hlght {
-      color: #488aff;
-      background-color: rgba(255, 255, 255, 1.0);
+      // background-color: rgba(255, 255, 255, 1.0);
 
       /* this one looks pretty good for popping the tab up */
       // box-shadow: 0px 0px 10px 4px rgba(120, 120, 120, 0.7);
 
       /* this one looks pretty good for popping the tab down */
-      box-shadow: 0px 8px 9px -3px rgba(120, 120, 120, 0.7) inset;
+      // box-shadow: 0px 8px 9px -3px rgba(120, 120, 120, 0.7) inset;
+
+      /* Slightly lower down */
+      box-shadow: 0px 8px 9px 2px rgba(105, 105, 105, 0.8) inset;
+
       border-right: 0;
       border-top: 0;
       border-bottom-left-radius: 3px;
       border-bottom-right-radius: 3px;
       +.onsite-tab-button {
         border-left: 0;
+      }
+      .icon-container {
+        i.tab-icon-ionic {
+          color: #488aff;
+          font-weight: bold;
+        }
       }
       // background-color: rgba(75, 170, 255, 0.5);
     }
@@ -166,8 +175,6 @@ onsite-tabs {
     // text-shadow: 5px 2px 10px 0px rgba(50, 50, 50, 0.7);
   }
 
-
-
   div.badge-container {
     display: flex;
     flex-flow: row nowrap;
@@ -179,125 +186,106 @@ onsite-tabs {
     position: absolute;
     // top: 16px;
     // right: 8px;
-    top: -4px;
-    right: -8px;
+    top: 3px;
+    right: 0px;
     overflow: visible;
-  }
-  div.badge-container > div.msg-badge {
-    flex: 1 1 auto;
-    border-radius: 100px;
-    font-weight: 700;
-    color: white;
-    background-color: rgba(180,0,0,1);
-    padding: 5px 0;
-    position: absolute;
-    top: -4px;
-    right: -3px;
-    font-size: 11px;
-    line-height: 11px;
-    width: 2em;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
+    >.msg-badge {
+      flex: 1 1 auto;
+      font-family: "Anonymous Pro";
+      font-weight: bold;
+      border-radius: 100px;
+      color: white;
+      background-color: rgba(180,0,0,1);
+      padding: 5px 0px 6px 2px;
+      position: absolute;
+      top: -3px;
+      right: -12px;
+      font-size: 24px;
+      line-height: 15px;
+      width: 1.1em;
+      text-align: center;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+    $spinnerSize: 48px;
+    // $spinnerSize: var(--size);
+      .waiting-badge {
+      --size: $spinnerSize;
+      flex: 1 1 auto;
+      border-radius: 100px;
+      background-color: transparent;
+      // background-image: url('/assets/images/dotspinner.svg');
+      // background-image: url('/assets/images/circle-dot-spinner.gif');
+      background-size: contain;
+      width     : $spinnerSize;
+      max-width : $spinnerSize;
+      min-width : $spinnerSize;
+      height    : $spinnerSize;
+      max-height: $spinnerSize;
+      min-height: $spinnerSize;
+      width     : var(--size);
+      max-width : var(--size);
+      min-width : var(--size);
+      height    : var(--size);
+      max-height: var(--size);
+      min-height: var(--size);
+      // position: relative;
+      // animation: dotspinner 2s steps(32, end) infinite;
+      // animation: dotspinner 1.1s infinite ease;
+      // transform: translateZ(0);
+      &.sk-circle {
+        position: relative;
+        top: -2px;
+        left: 6px;
+      }
+    }
+    .sk-circle {
+      .sk-child {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        &:before {
+          content: '';
+          display: block;
+          margin: 0 auto;
+          width: 10%;
+          height: 40%;
+          background-color: rgba(255, 0, 0, 0.8);
+          border-radius: 50%;
+          animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
+        }
+      }
+      .sk-circle2 { transform: rotate(30deg); }
+      .sk-circle3 { transform: rotate(60deg); }
+      .sk-circle4 { transform: rotate(90deg); }
+      .sk-circle5 { transform: rotate(120deg); }
+      .sk-circle6 { transform: rotate(150deg); }
+      .sk-circle7 { transform: rotate(180deg); }
+      .sk-circle8 { transform: rotate(210deg); }
+      .sk-circle9 { transform: rotate(240deg); }
+      .sk-circle10 { transform: rotate(270deg); }
+      .sk-circle11 { transform: rotate(300deg); }
+      .sk-circle12 { transform: rotate(330deg); }
+      .sk-circle2:before { animation-delay: -1.1s; }
+      .sk-circle3:before { animation-delay: -1s; }
+      .sk-circle4:before { animation-delay: -0.9s; }
+      .sk-circle5:before { animation-delay: -0.8s; }
+      .sk-circle6:before { animation-delay: -0.7s; }
+      .sk-circle7:before { animation-delay: -0.6s; }
+      .sk-circle8:before { animation-delay: -0.5s; }
+      .sk-circle9:before { animation-delay: -0.4s; }
+      .sk-circle10:before { animation-delay: -0.3s; }
+      .sk-circle11:before { animation-delay: -0.2s; }
+      .sk-circle12:before { animation-delay: -0.1s; }
+    }
   }
 
-  $spinnerSize: 24px;
-
-  .waiting-badge {
-    flex: 1 1 auto;
-    border-radius: 100px;
-    background-color: transparent;
-    // background-image: url('/assets/images/dotspinner.svg');
-    // background-image: url('/assets/images/circle-dot-spinner.gif');
-    background-size: contain;
-    width: $spinnerSize;
-    max-width: $spinnerSize;
-    min-width: $spinnerSize;
-    height: $spinnerSize;
-    max-height: $spinnerSize;
-    min-height: $spinnerSize;
-    // position: relative;
-    // animation: dotspinner 2s steps(32, end) infinite;
-    // animation: dotspinner 1.1s infinite ease;
-    // transform: translateZ(0);
-  }
-
-
-  .sk-circle {
-    width: $spinnerSize;
-    max-width: $spinnerSize;
-    min-width: $spinnerSize;
-    height: $spinnerSize;
-    max-height: $spinnerSize;
-    min-height: $spinnerSize;
-    position: relative;
-  }
   .hideSpinner {
     display: none;
     // white-space: inherit;
   }
-  .sk-circle .sk-child {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-  }
-  .sk-circle .sk-child:before {
-    content: '';
-    display: block;
-    margin: 0 auto;
-    width: 15%;
-    height: 15%;
-    background-color: rgba(255, 0, 0, 0.8);
-    border-radius: 100%;
-    animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
-  }
-  .sk-circle .sk-circle2 {
-    transform: rotate(30deg); }
-  .sk-circle .sk-circle3 {
-    transform: rotate(60deg); }
-  .sk-circle .sk-circle4 {
-    transform: rotate(90deg); }
-  .sk-circle .sk-circle5 {
-    transform: rotate(120deg); }
-  .sk-circle .sk-circle6 {
-    transform: rotate(150deg); }
-  .sk-circle .sk-circle7 {
-    transform: rotate(180deg); }
-  .sk-circle .sk-circle8 {
-    transform: rotate(210deg); }
-  .sk-circle .sk-circle9 {
-    transform: rotate(240deg); }
-  .sk-circle .sk-circle10 {
-    transform: rotate(270deg); }
-  .sk-circle .sk-circle11 {
-    transform: rotate(300deg); }
-  .sk-circle .sk-circle12 {
-    transform: rotate(330deg); }
-  .sk-circle .sk-circle2:before {
-    animation-delay: -1.1s; }
-  .sk-circle .sk-circle3:before {
-    animation-delay: -1s; }
-  .sk-circle .sk-circle4:before {
-    animation-delay: -0.9s; }
-  .sk-circle .sk-circle5:before {
-    animation-delay: -0.8s; }
-  .sk-circle .sk-circle6:before {
-    animation-delay: -0.7s; }
-  .sk-circle .sk-circle7:before {
-    animation-delay: -0.6s; }
-  .sk-circle .sk-circle8:before {
-    animation-delay: -0.5s; }
-  .sk-circle .sk-circle9:before {
-    animation-delay: -0.4s; }
-  .sk-circle .sk-circle10:before {
-    animation-delay: -0.3s; }
-  .sk-circle .sk-circle11:before {
-    animation-delay: -0.2s; }
-  .sk-circle .sk-circle12:before {
-    animation-delay: -0.1s; }
-
   @keyframes sk-circleBounceDelay {
     0%, 80%, 100% {
       transform: scale(0);
