--- a/src/pages/fancy-select/fancy-select.scss
+++ b/src/pages/fancy-select/fancy-select.scss
@@ -29,6 +29,11 @@ $blue: blue;
 .one-ion-option {
   // font-size: 3.0vw;
   font-size:18px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
   svg {
     fill: currentColor;
   }
@@ -41,12 +46,15 @@ $blue: blue;
   // width: 15px;
   // height: 15px;
   // font-size: 58px;
+  font-size: 32px;
   display: inline-block;
 }
 
 .shift-text {
   display: inline-block;
   font-weight: bold;
+  padding-top: 5px;
+  padding-left: 5px;
   // font-size: 3.5vw;
 }
 
