--- a/src/pages/report/report.scss
+++ b/src/pages/report/report.scss
@@ -143,4 +143,13 @@ page-report {
       }
     }
   }
+  .report-button {
+    &.save {
+      height: 72px;
+      font-size: 24px;
+    }
+    &.cancel {
+
+    }
+  }
 }
