--- a/src/components/tabs/tabs.html
+++ b/src/components/tabs/tabs.html
@@ -17,7 +17,8 @@
 <!-- <ion-footer no-border>
   <ion-toolbar> -->
     <div class="onsite-tab-bar" id="onsite-nav" [class.disabled]="tabServ.isDisabled()">
-      <div class="onsite-tab-button" [class.hlght]="tabServ.isActive(i)" (click)="tabServ.goToPage(tab.name)" *ngFor="let tab of tabServ.tabInfo; let i=index">
+      <div class="onsite-tab-button" [class.hide]="tab.show === false || tab.role==='dev' && !ud.isDeveloper()" [class.hlght]="tabServ.isActive(i)" (click)="tabServ.goToPage(tab.name)" *ngFor="let tab of tabServ.tabInfo; let i=index">
+        <!-- <div *ngIf="tab.show === true; then visibleTab; else invisibleTab"></div> -->
         <div class="icon-container">
           <i class="tab-icon-ionic" [ngClass]="tabServ.getIcon(i)"></i>
           <div class="badge-container">
@@ -43,7 +44,33 @@
         </div>
       </div>
     </div>
-  <!-- </ion-toolbar>
+    <!-- <ng-template #visibleTab>
+      <div class="icon-container">
+        <i class="tab-icon-ionic" [ngClass]="tabServ.getIcon(i)"></i>
+        <div class="badge-container">
+          <div class="msg-badge" [class.hide]="tabServ.getBadgeCount(i) < 1">{{tabServ.getBadgeCount(i)}}</div> -->
+          <!-- <div class="waiting-badge waiting-gif" *ngIf="!getHider(i)"></div> -->
+          <!-- <div class="waiting-badge waiting-gif" *ngIf="!getHider(i)"> -->
+          <!-- <div class="sk-circle waiting-badge" *ngIf="!getHider(i)"> -->
+          <!-- <div class="sk-circle waiting-badge" [class.hideSpinner]="tabServ.isHidden(i)">
+            <div class="sk-circle1 sk-child"></div>
+            <div class="sk-circle2 sk-child"></div>
+            <div class="sk-circle3 sk-child"></div>
+            <div class="sk-circle4 sk-child"></div>
+            <div class="sk-circle5 sk-child"></div>
+            <div class="sk-circle6 sk-child"></div>
+            <div class="sk-circle7 sk-child"></div>
+            <div class="sk-circle8 sk-child"></div>
+            <div class="sk-circle9 sk-child"></div>
+            <div class="sk-circle10 sk-child"></div>
+            <div class="sk-circle11 sk-child"></div>
+            <div class="sk-circle12 sk-child"></div>
+          </div>
+        </div>
+      </div>
+    </ng-template>
+    <ng-template #invisibleTab></ng-template> -->
+    <!-- </ion-toolbar>
 </ion-footer> -->
 
 <!-- <div class="onsite-tab-bar" id="onsite-nav" *ngIf="tabsReady">
