--- a/src/components/tabs/tabs.scss
+++ b/src/components/tabs/tabs.scss
@@ -107,7 +107,7 @@ onsite-tabs {
       }
     }
     &.hlght {
-      // background-color: rgba(255, 255, 255, 1.0);
+      background-color: rgba(240, 255, 240, 0.8);
 
       /* this one looks pretty good for popping the tab up */
       // box-shadow: 0px 0px 10px 4px rgba(120, 120, 120, 0.7);
