--- a/src/pages/report-history/report-history.scss
+++ b/src/pages/report-history/report-history.scss
@@ -1,4 +1,7 @@
 page-report-history {
+  ion-navbar {
+    box-shadow: 0px 3px 10px 1px rgba(140,140,140,1);
+  }
   .frozenToolbar {}
   .reportHeaderList {}
   .scrollList {
@@ -22,8 +25,12 @@ page-report-history {
   .invisibleIcon {
     visibility: hidden;
   }
-  .reportList {}
+  .report-history-container {
+    width: 100%;
+  }
+
   .report-history-list-item-sliding {
+    margin-top: 5px;
     cursor: pointer;
     background-color: transparent;
     // &:hover {
@@ -33,13 +40,13 @@ page-report-history {
       background-color: rgba(0, 0, 255, 0.5);
     }
     .ion-item {
-      background-color: transparent;
+      // background-color: transparent;
     }
-
   }
+
   ion-item.report-history-list-item {
     -webkit-tap-highlight-color: unset !important;
-    background-color: transparent;
+    // background-color: transparent;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -47,6 +54,7 @@ page-report-history {
     align-items: center;
     .item-inner {
       background-color: transparent;
+      border-bottom: 0 !important;
       .input-wrapper {
         background-color: transparent;
         ion-label {
@@ -79,6 +87,7 @@ page-report-history {
     cursor: pointer;
   }
   .report-history-group-date {
+    margin-top: 10px;
     // max-height: 50px;
   }
   .report-history-divider-date {
