Tabs actually show up this time

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,5 +2,5 @@
   <clock></clock>
 </div>
 <ion-nav *ngIf="!ud.showClock" class="ionic-root-nav-element" [root]="rootPage"></ion-nav>
-<onsite-tabs *ngIf="ud.isAppLoaded()"></onsite-tabs>
+<onsite-tabs></onsite-tabs>
 <ng-template #tabsTarget></ng-template>
