New resources and report method changes
New icon and splash screen

--- a/src/pages/report-view/report-view.scss
+++ b/src/pages/report-view/report-view.scss
@@ -21,6 +21,12 @@ ion-content {
 }
 
 page-report-view {
+  .flag-icon {
+    transform: rotate(45deg);
+    zoom: 0.8;
+    position: relative;
+    top: 10px;
+  }
   .flagged {
     color: red;
   }
